# tusur-asu-pascal

./: .gitignore  CMakeLists.txt  README.md  README_RU.md
.github/workflows/: ubuntu.yml
src/: exam1_6.pas  example.pas
